--- a/QdaoCaseManager/QdaoCaseManager.Client/Shared/Confirmation.razor
+++ b/QdaoCaseManager/QdaoCaseManager.Client/Shared/Confirmation.razor
@@ -5,7 +5,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="deleteConfirmationModalLabel">@Title</h5>
-                <button type="button" class="close btn btn-secondary" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close btn btn-primary" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
